# phantom

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TOTAL_SCOPE.md  config.example.toml  install.sh  run.sh
.github/workflows/: ci.yml  release.yml
contrib/: 99-phantom.rules  README.md  phantom.service
contrib/android-server/: README.md  build.sh
contrib/android-server/src/com/phantom/server/: PhantomServer.java
contrib/waydroid/: Vendor_1234_Product_5678.idc
docs/: ANDROID_SOCKET_PROTOCOL.md  ARCHITECTURE.md  BUILD.md  DEVELOPMENT.md  EDGE_CASES.md  GAME_PATTERNS.md  INSTALL.md  IPC.md  OPERATIONS.md  PROFILES.md  PROTOCOL.md  RELEASING.md  REVIEW_PROMPT.md  ROADMAD.md  ROADMAP.md  TESTING.md  TROUBLESHOOT.md
packaging/: build-appimage.sh  build-arch-package.sh  build-deb.sh  build-tarball.sh  common.sh  stage.sh  write-checksums.sh
packaging/arch/: PKGBUILD.in  repo-add.sh
packaging/linux/: AppRun  phantom-gui.desktop
phantom/: Cargo.toml  README.md
phantom-gui/: Cargo.toml  README.md
phantom-gui/src/: cursor_overlay.rs  main.rs  overlay.rs
phantom/src/: android_inject.rs  config.rs  desktop_relay.rs  engine.rs  error.rs  hyprland_cursor.rs  hyprland_ipc.rs  inject.rs  input.rs  ipc.rs  lib.rs  logging.rs  main.rs  mouse_touch.rs  overlay.rs  profile.rs  touch.rs  waydroid.rs  x11_cursor.rs
phantom/tests/: integration.rs
profiles/: asphalt8.json  asphalt9.json  efootball-template.json  genshin.json  pubg-mobile-layout1.json  pubg-small.json  pubg.json  subway-surfers.json  temple-run.json
