[package]
name = "phantom-gui"
version.workspace = true
edition.workspace = true
description = "Profile editor GUI for Phantom"

[dependencies]
phantom = { path = "../phantom" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
toml.workspace = true
eframe = "0.31"
egui = "0.31"
image = "0.25"
rfd = "0.15"
