[package]
name = "phantom-gui"
version.workspace = true
edition.workspace = true
description = "Profile editor GUI for Phantom"
readme = "README.md"

[dependencies]
phantom = { path = "../phantom" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
toml.workspace = true
eframe = "0.31"
egui = "0.31"
image = "0.25"
rfd = "0.15"
smithay-client-toolkit = { version = "0.19.2", default-features = false }
wayland-client = "0.31.14"
